js/js.translator/testData/incremental/invalidation/friendDependency/main/test.7.kt
fun test(): Int {
    konst v = PublicClassHeir()
    return v.foo() + v.bar + v.baz()
}
